trocando de cor

--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ p {
     text-align: center;
 }
 body{
-    background-color: royalblue;
+    background-color: teal;
     
 }
 strong{
-    color: peachpuff;
+    color: lavender;
 }
